--- a/api.yaml
+++ b/api.yaml
@@ -1,10 +1,105 @@
-openapi: 3.1.0
+openapi: 3.0.3
 info:
   title: STD23042 - TD1
   version: 1.0.0
 servers:
   - url: https://localhost.std23042.com
 paths:
+  /books:
+    get:
+      tags:
+        - Books
+      summary: Get all books
+      operationId: getBooks
+      parameters:
+        - name: bookName
+          in: query
+          description: Filter books by name
+          required: false
+          schema:
+            type: string
+        - name: releaseDateFrom
+          in: query
+          description: Filter books released after this date
+          required: false
+          schema:
+            type: string
+            format: date
+            example: 2023-01-01
+        - name: releaseDateTo
+          in: query
+          description: Filter books released before this date
+          required: false
+          schema:
+            type: string
+            format: date
+            example: 2023-12-31
+      responses:
+        '200':
+          description: List of all books
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Book"
+    post:
+      tags:
+        - Books
+      summary: Create a new book
+      operationId: createBook
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Book"
+      responses:
+        '201':
+          description: Book created successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Book"
+    put:
+      tags:
+        - Books
+      summary: Update an existing book
+      operationId: updateBook
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Book"
+      responses:
+        '200':
+          description: Book updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Book"
+  /books/{id}:
+    delete:
+      tags:
+        - Books
+      summary: Delete a book
+      operationId: deleteBook
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Book deleted successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Book"
+
   /authors:
     get:
       tags:
@@ -85,6 +180,34 @@ paths:
                 $ref: "#/components/schemas/Author"
 components:
   schemas:
+    Book:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: 123e4567-e89b-12d3-a456-426614174000
+        bookName:
+          type: string
+          example: The Great Gatsby
+        author:
+          type: string
+          example: F. Scott Fitzgerald
+        pageNumbers:
+          type: integer
+          example: 180
+        releaseDate:
+          type: string
+          format: date
+          example: 1925-04-10 
+        topic:
+          $ref: "#/components/schemas/Topic"
+    Topic:
+      type: string
+      enum:
+        - ROMANCE
+        - COMEDY
+        - OTHER
     Author:
       type: object
       properties:
