--- a/api.yaml
+++ b/api.yaml
@@ -1,34 +1,34 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: STD23042 - TD1
   version: 1.0.0
 servers:
   - url: https://localhost.std23042.com
 paths:
-  /books:
+  /groups:
     get:
       tags:
-        - Books
-      summary: Get all books
-      operationId: getBooks
+        - Groups
+      summary: Get all groups
+      operationId: getGroups
       parameters:
-        - name: bookName
+        - name: groupName
           in: query
-          description: Filter books by name
+          description: Filter groups by name
           required: false
           schema:
             type: string
-        - name: releaseDateFrom
+        - name: groupYearFrom
           in: query
-          description: Filter books released after this date
+          description: Filter groups after this date
           required: false
           schema:
             type: string
             format: date
             example: 2023-01-01
-        - name: releaseDateTo
+        - name: groupYearTo
           in: query
-          description: Filter books released before this date
+          description: Filter groups before this date
           required: false
           schema:
             type: string
@@ -36,55 +36,55 @@ paths:
             example: 2023-12-31
       responses:
         '200':
-          description: List of all books
+          description: List of all groups
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Book"
+                  $ref: "#/components/schemas/Group"
     post:
       tags:
-        - Books
-      summary: Create a new book
-      operationId: createBook
+        - Groups
+      summary: Create a new group
+      operationId: createGroup
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Book"
+              $ref: "#/components/schemas/Group"
       responses:
         '201':
-          description: Book created successfully
+          description: Group created successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Book"
+                $ref: "#/components/schemas/Group"
     put:
       tags:
-        - Books
-      summary: Update an existing book
-      operationId: updateBook
+        - Groups
+      summary: Update an existing group
+      operationId: updateGroup
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Book"
+              $ref: "#/components/schemas/Group"
       responses:
         '200':
-          description: Book updated successfully
+          description: Group updated successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Book"
-  /books/{id}:
+                $ref: "#/components/schemas/Group"
+  /groups/{id}:
     delete:
       tags:
-        - Books
-      summary: Delete a book
-      operationId: deleteBook
+        - Groups
+      summary: Delete a group
+      operationId: deleteGroup
       parameters:
         - name: id
           in: path
@@ -94,76 +94,76 @@ paths:
             format: uuid
       responses:
         '200':
-          description: Book deleted successfully
+          description: Group deleted successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Book"
+                $ref: "#/components/schemas/Group"
 
   /authors:
     get:
       tags:
-        - Authors
-      summary: Get all Authors
-      operationId: getAuthors
+        - Students
+      summary: Get all Students
+      operationId: getStudents
       parameters:
       - name: name 
         in: query
-        description: Filter authors by name
+        description: Filter student by name
         required: false
         schema:
           type: string
       responses:
         '200':
-          description: List of all authors
+          description: List of all students
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Author"
+                  $ref: "#/components/schemas/Student"
     post:
       tags:
-        - Authors
-      summary: Create a new author
-      operationId: createAuthor
+        - Students
+      summary: Create a new student
+      operationId: createStudent
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Author"
+              $ref: "#/components/schemas/Student"
       responses:
         '201':
-          description: Author created successfully
+          description: Student created successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Author"
+                $ref: "#/components/schemas/Student"
     put:
       tags:
-        - Authors
-      summary: Update an existing author
-      operationId: updateAuthor
+        - Students
+      summary: Update an existing student
+      operationId: updateStudent
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Author"
+              $ref: "#/components/schemas/Student"
       responses:
         '200':
-          description: Author updated successfully
+          description: Student updated successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Author"
+                $ref: "#/components/schemas/Student"
   /authors/{id}:
     delete:
       tags:
-        - Authors
-      summary: Delete an author
-      operationId: deleteAuthor
+        - Students
+      summary: Delete an student
+      operationId: deleteStudent
       parameters:
         - name: id
           in: path
@@ -173,42 +173,44 @@ paths:
             format: uuid
       responses:
         '200':
-          description: Author deleted successfully
+          description: Student deleted successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Author"
+                $ref: "#/components/schemas/Student"
 components:
   schemas:
-    Book:
+    Group:
       type: object
       properties:
         id:
           type: string
           format: uuid
           example: 123e4567-e89b-12d3-a456-426614174000
-        bookName:
+        name:
           type: string
-          example: The Great Gatsby
-        author:
-          type: string
-          example: F. Scott Fitzgerald
-        pageNumbers:
-          type: integer
-          example: 180
-        releaseDate:
+          example: J2
+        year:
           type: string
           format: date
-          example: 1925-04-10 
-        topic:
-          $ref: "#/components/schemas/Topic"
-    Topic:
+          example: 2023
+        effective:
+          type: integer
+          example: 45
+        promotion:
+          $ref: "#/components/schemas/Promotion"
+        students:
+          type: array
+          items:
+            $ref: "#/components/schemas/Student"
+    Promotion:
       type: string
       enum:
-        - ROMANCE
-        - COMEDY
-        - OTHER
-    Author:
+        - G
+        - H
+        - J
+        - K
+    Student:
       type: object
       properties:
         id:
@@ -218,6 +220,16 @@ components:
         name:
           type: string
           example: Lucas Clavel
+        birthdate:
+          type: string
+          format: date
+          example: 09-10-03 
+        reference:
+          type: string
+          example: STD23042
+        group:
+          type: string
+          example: J2
         sex:
           $ref: '#/components/schemas/Sex'
     Sex:
