--- a/api.yaml
+++ b/api.yaml
@@ -34,6 +34,8 @@ paths:
             type: string
             format: date
             example: 2023-12-31
+        - $ref: "#/components/parameters/Page"
+        - $ref: "#/components/parameters/PageSize"
       responses:
         '200':
           description: List of all groups
@@ -53,7 +55,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Group"
+              $ref: "#/components/schemas/CrupdateGroup"
       responses:
         '201':
           description: Group created successfully
@@ -71,7 +73,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Group"
+              $ref: "#/components/schemas/CrupdateGroup"
       responses:
         '200':
           description: Group updated successfully
@@ -99,6 +101,58 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Group"
+  
+  /groups/{groupId}/students/{studentId}:
+    put:
+      tags:
+        - Groups 
+      summary: Attach on student to one group  
+      operationId: attachOneStudentToOneGroup 
+      parameters:
+        - name: groupId 
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: studentId 
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Attached one student to one group
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Group"
+  /groups/students:
+    put:
+      tags:
+        - Groups 
+      summary: Attach students to groups  
+      operationId: attachStudentsToGroups 
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: "#/components/schemas/UpdateStudentGroup"
+      responses:
+        '200':
+          description: Attached students to groups 
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/UpdateStudentGroup"
 
   /students:
     get:
@@ -107,12 +161,13 @@ paths:
       summary: Get all Students
       operationId: getStudents
       parameters:
-      - name: name 
-        in: query
-        description: Filter student by name
-        required: false
-        schema:
-          type: string
+        - name: name 
+          in: query
+          description: Filter student by name
+          required: false
+          schema:
+            type: string
+
       responses:
         '200':
           description: List of all students
@@ -180,7 +235,17 @@ paths:
                 $ref: "#/components/schemas/Student"
 components:
   schemas:
-    Group:
+    UpdateStudentGroup:
+      type: object
+      properties:
+        bookId:
+          type: string
+          format: uuid
+          example: J2
+        studentId:
+          type: string
+          example: 123e4567-e89b-12d3-a456-426614174000
+    CrupdateGroup:
       type: object
       properties:
         id:
@@ -199,6 +264,11 @@ components:
           example: 45
         promotion:
           $ref: "#/components/schemas/Promotion"
+    Group:
+      type: object
+      allOf:
+        - $ref: "#/components/schemas/CrupdateGroup"
+      properties:
         students:
           type: array
           items:
@@ -237,3 +307,20 @@ components:
       enum:
         - M
         - F
+  parameters:
+    Page:
+      name: page
+      in: query
+      required: false 
+      description: Page to retrieve
+      schema:
+        type: integer
+        default: 1
+    PageSize:
+      name: pageSize
+      in: query
+      required: false 
+      description: PageSize to retrieve for each page
+      schema:
+        type: integer
+        default: 50 
