--- a/library.yaml
+++ b/library.yaml
@@ -36,6 +36,8 @@ paths:
             type: string
             format: date
             example: 2023-12-31
+        - $ref: "#/components/parameters/Page"
+        - $ref: "#/components/parameters/PageSize"
       responses:
         '200':
           description: List of all books
@@ -289,3 +291,20 @@ components:
       enum:
         - M
         - F
+  parameters:
+    Page:
+      name: page
+      in: query
+      required: false 
+      description: Page to retrieve
+      schema:
+        type: integer
+        default: 1
+    PageSize:
+      name: pageSize
+      in: query
+      required: false 
+      description: PageSize to retrieve for each page
+      schema:
+        type: integer
+        default: 50 
