--- a/api.yaml
+++ b/api.yaml
@@ -34,8 +34,8 @@ paths:
             type: string
             format: date
             example: 2023-12-31
-        - $ref: "#/components/parameters/Page"
-        - $ref: "#/components/parameters/PageSize"
+        - $ref: "#/components/parameters/QueryPaginationPage"
+        - $ref: "#/components/parameters/QueryPaginationPageSize"
       responses:
         '200':
           description: List of all groups
@@ -167,8 +167,8 @@ paths:
           required: false
           schema:
             type: string
-        - $ref: "#/components/parameters/PathPage"
-        - $ref: "#/components/parameters/PathPageSize"
+        - $ref: "#/components/parameters/PathPaginationPage"
+        - $ref: "#/components/parameters/PathPaginationPageSize"
 
       responses:
         '200':
@@ -237,6 +237,7 @@ paths:
                 $ref: "#/components/schemas/Student"
 components:
   schemas:
+
     UpdateStudentGroup:
       type: object
       properties:
@@ -309,8 +310,25 @@ components:
       enum:
         - M
         - F
+    ApiResponse:
+      type: object
+      properties:
+        status:
+          type: object
+          properties:
+            code:
+              type: number
+              example: 200
+            message:
+              type: string
+              example: OK
+        body:
+          type: object
+
+    
   parameters:
-    PathPage:
+
+    PathPaginationPage:
       name: page
       in: path 
       required: true 
@@ -318,7 +336,7 @@ components:
       schema:
         type: integer
         default: 1
-    PathPageSize:
+    PathPaginationPageSize:
       name: pageSize
       in: path
       required: true 
@@ -326,7 +344,7 @@ components:
       schema:
         type: integer
         default: 50 
-    Page:
+    QueryPaginationPage:
       name: page
       in: query
       required: false 
@@ -334,7 +352,7 @@ components:
       schema:
         type: integer
         default: 1
-    PageSize:
+    QueryPaginationPageSize:
       name: pageSize
       in: query
       required: false 
